--- a/Themes/default/css/ie6.css
+++ b/Themes/default/css/ie6.css
@@ -39,6 +39,11 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd
 	float: none;
 	width: auto;
 }
+/*generic lists header */
+.table_grid thead th
+{
+	padding: 0 !important;
+}
 
 /* Overrides for the message index template
 ------------------------------------------------------- */
@@ -50,7 +55,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd
 {
 	border-bottom: solid 1px white;
 }
-.description
+#topic_icons .description
 {
 	padding: 2em 1em 1em 1em;
 	overflow: auto;
